# triangular-nim

./: .gitignore  Cargo.toml
src/: board.rs  compute.rs  main.rs
