[package]
name = "triangular-nim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fnv = "1.0"
parking_lot = "0.12"
rand = "0.8"
rayon = "1.10"
smallvec = "1.13"

[profile.release]
strip = "debuginfo"
opt-level = 3
lto = "thin"
